# PasteBot

./: .gitmodules  Commands.cs  LICENSE  PasteBot.csproj  Program.cs  README.md
CPP/: CMakeLists.txt
CPP/src/: main.cpp
CSharp/: PasteBot.csproj  Program.cs
Java/src/: DiscordBot.java
